--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -13,8 +13,8 @@ permissions:
   contents: read
 
 jobs:
-  build:
 
+  backend:
     runs-on: ubuntu-latest
 
     steps:
@@ -29,7 +29,7 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install -r requirements.txt
+        pip install -r backend/requirements.pip
 
     - name: Unit tests
       run: |
