--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -28,8 +28,9 @@ jobs:
 
     - name: Install dependencies
       run: |
+        cd backend
         python -m pip install --upgrade pip
-        pip install -r backend/requirements.pip
+        pip install -r requirements.pip
 
     - name: Unit tests
       run: |
