Adjust workflow to master branch

--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -5,7 +5,7 @@ name: Pytest
 
 on:
   push:
-    branches: [ "feature/bjorn/assignment6" ]
+    branches: [ "master" ]
   pull_request:
     branches: [ "master" ]
 
